apps/overlays/development/owasp-dependency-track/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dependency-track-frontend-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - dependency-track.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dependency-track-frontend
      port: 8080
